strat embedding Core Data

--- a/MU106/MU106-Info.plist
+++ b/MU106/MU106-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>LIAL.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>temsan.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleLocalizations</key>
